name:                reflex-vinyl
version:             0.0.0
cabal-version:       >=1.24

----------------------------------------

build-type:          Simple 
category:            Data,Records,Reflex
synopsis:            Convenience records for FRP Events and DOM Events
description:         
 .
 @vinyl@ Records of @reflex@ (and @reflex-dom@) @Events@ \/ @Behaviors@ \/ @Dynamics@.
 . 
 See the source of "Reflex.Vinyl.Example" for an example.
 .
 Quickstart:
 .
 @
 import Reflex.Vinyl
 \-- TODO
 @
 .
 Transitive dependencies:
 .
 .
 <<reflex-vinyl-dependencies.png>>
 .

homepage:            http://github.com/sboosali/reflex-vinyl#readme
bug-reports:         http://github.com/sboosali/reflex-vinyl/issues
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2018 Spiros Boosalis
license:             BSD3
license-file:        LICENSE
stability:           provisional
tested-with:
  GHC == 8.2.2
  GHC == 8.0.2

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

----------------------------------------

extra-source-files:
  README.md
  stack.yaml
  .travis.yml
  HLint.hs

-- data-files:
--   data/

source-repository head
  type:     git
  location: https://github.com/sboosali/reflex-vinyl

----------------------------------------
-- FLAGS

-- You can disable the doctests test suite with -f-test-doctests.
flag test-docs
  default:     False
  description: Run the doctests (with the eponymous `doctest`), called the `test documentation` unit (in this cabal file). 
  manual:      True

-- You can disable the hunit test suite with -f-test-hunit. 
flag test-unit
  default:     False
  description: Run the unit tests, called the `test unit` unit (in this cabal file).  
  manual:      True

flag test-properties
  default:     False
  description: Run the property tests (i.e. QuickCheck), called the `test properties` unit (in this cabal file).  
  manual:      True

flag test-macros
  default: False
  description: Run any macro tests (i.e. TemplateHaskell), called the `test templates` unit (in this cabal file).  
  manual:  True

flag bench-speed
  default:     False
  description: Execute the benchmarks (which may take a long time).
  manual:      True

flag dump-splices
  default:     False
  description: Make the `template` test suite dump its template-haskell splices.
  manual:      True

----------------------------------------
-- LIBRARY

library
 hs-source-dirs:      sources

 ghc-options:
  -Wall
-- disable
  -fno-warn-unticked-promoted-constructors
-- enable
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fwarn-missing-fields

 default-language:   Haskell2010
 default-extensions: PackageImports AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 exposed-modules:

                 Reflex.Vinyl
                 Reflex.Vinyl.Types
                 Reflex.Vinyl.Core		
                 Reflex.Vinyl.Events

                 Reflex.Vinyl.Example                
 other-modules:

                 Reflex.Vinyl.Extra            
                 -- Paths_reflex_vinyl
-- autogen-modules:
                 -- Paths_reflex_vinyl

 build-depends:
               base >=4.7 && <5

-- mine 
             , spiros
--              , enumerate 

-- (extended) standard library 
             , deepseq
             , hashable
             , containers
             , unordered-containers
             , text 
             , bytestring
             , transformers
             , mtl

-- ekmett 
             -- , exceptions
             , lens

-- other packages 

             , vinyl
             , reflex
             , reflex-dom-core
             , reflex-dom

             , lucid

----------------------------------------
-- EXECUTABLES

executable example-reflex-vinyl
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , reflex-vinyl

----------------------------------------
-- TESTS


-- $ stack test unit
test-suite unit
 hs-source-dirs:      tests
 main-is:             UnitTests.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Reflex.Vinyl.Test

 if !flag(test-unit)
    buildable: False
 else
    build-depends:
       base
     , reflex-vinyl 
     , tasty
  

-- $ stack test properties 
test-suite properties 
 hs-source-dirs:      tests
 main-is:             PropertyTests.hs

 type:                exitcode-stdio-1.0
 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Reflex.Vinyl.Property 

 build-depends:
    base
  , reflex-vinyl
  , QuickCheck 
  , tasty
  , tasty-quickcheck
  , hedgehog
  , tasty-hedgehog


-- $ stack test documentation
test-suite documentation 

 hs-source-dirs:      tests
 main-is:             DocTests.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 if (!flag(test-docs) || impl(ghcjs))
    buildable: False
    -- (`ghcjsi` just doesn't work? or `doctest` needs the GHC API?) else
    build-depends:
       base
     , reflex-vinyl
     , doctest


-- $ stack test templates 
-- Template Haskell 
-- Verify that Template Haskell expansion works
test-suite templates
  hs-source-dirs:      tests
  main-is:             TemplateHaskellTests.hs

  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -threaded

  if flag(dump-splices)
    ghc-options: -ddump-splices

  if !flag(test-macros)
     buildable: False
  else
     build-depends:
         base
       , reflex-vinyl
       , lens


----------------------------------------
-- BENCHMARKS

-- $ stack bench 
benchmark speed
 hs-source-dirs:      benchmarks
 main-is:             Bench.hs

 type:             exitcode-stdio-1.0
 default-language: Haskell2010
 ghc-options:
      -Wall -threaded
       -O2 -fdicts-cheap -funbox-strict-fields

 if !flag(bench-speed)
    buildable: False
 else
    build-depends:
       base
     , reflex-vinyl
     , criterion
     , deepseq


----------------------------------------
-- NOTES

-- originally generated with this command:  
-- 
-- $ stack new reflex-vinyl https://raw.githubusercontent.com/sboosali/configuration/master/stack/templates/spirosboosalis.hsfiles -p "module:Reflex.Vinyl" -p "filepath:Reflex/Vinyl"
-- 
-- given this configuration in `~/.stack/config.yaml`: 
-- 
-- templates:
--   params:
--     author-email:    samboosalis@gmail.com 
--     author-name:     Spiros Boosalis 
--     github-username: sboosali 
--     copyright:       2018 Spiros Boosalis  
--     synopsis:        TODO 

----------------------------------------
